change jdk gitignore